--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-html {
-  font-family: sans-serif;
-  font-size: 14px;
-}
-
-body {
-  padding: 1rem;
-}
-
 .List {
   border: 1px solid #e6e4dc;
   max-width: 100%;
@@ -25,4 +16,19 @@ body {
 
 button {
   border: 1px solid gray;
+}
+
+.info-container {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  top: 3rem;
+  right: 3rem;
+  border: 1px solid black;
+  padding: 2rem;
+  background-color: white;
+}
+
+.info-container > p {
+  margin: 0;
 }
